# fullstack-rust-poetrydb

./: Cargo.toml  accordion.html
src/: db.rs  gen.rs  index.html  main.rs  poem.html  tmp.html  utils.js
