[package]
name = "poetrydb-scraper"
version = "0.1.0"
authors = ["minauteur <thompennington@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
rusqlite = {version = "0.20.0", features = ["bundled"] }
time = "0.1.42"
iron = "*"
hyper = "*"
router = "*"

chrono = { version = "0.3", features = ["serde"] }
rand = "*"
rust-crypto = "*"
base64 = "~0.4.0"
serde = "1.0.102"
serde_json = "1.0.41"
serde_derive = "0.9"
markov = "*"
iron-cors = "0.8.0"
[dependencies.bodyparser]

git = "https://github.com/iron/body-parser.git"